traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:7: error: not found: value getHauteur
        for (y <- 0 to getHauteur()-1)
                       ^TraversalZigZag:19: error: not found: value getHauteur
        for (y <- getHauteur()-1 to 0)
                  ^