traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var cpt=0

  do {

    for(x <- 0 to getMondeLargeur()-1){
      if (x%2==0){
        for (y <- 0 to getHauteur()-1)
        {	setPos(x,y)

         ecritMessage(cpt)
         cpt = cpt + 1
        }



      }
      else
      {
        for (y <- getHauteur()-1 to 0)
        {	setPos(x,y)

         ecritMessage(cpt)
         cpt = cpt + 1
        }
      }



    }

  } while (cpt==48)

}